--- a/Css/style.css
+++ b/Css/style.css
@@ -1,13 +1,24 @@
+@font-face {
+    font-family: "Montserrat";
+    src: url(../fonts/Montserrat-VariableFont_wght.ttf);
+    font-style: normal;
+    font-display: swap;
+}
+
 :root{
+    --primary-color: #8f0101;
+    --secondary-color: #b81515;
+
     --background-primary-color: #ffffff;
     --background-secondary-color: #f5f5f5;
     --background-tertiary-color: #0000;
 
-    --button-primary-color: #8f0101;
-    --button-secondary-color: #b81515;
-
     --text-primary-color: #222222 ;
     --text-secondary-color: #ffffff ;
+
+    --titles-weight: 700;
+    --text-weight: 400;
+    --menu-text-weight: 500;
 
 }
 
@@ -18,3 +29,7 @@ body, img, h1, p, fieldset, legend, label, input, select, textarea, button{
      
 }
 
+h1{
+    font-family: "Montserrat";
+    font-weight: var(--titles-weight);
+}
