--- a/Css/header.css
+++ b/Css/header.css
@@ -14,10 +14,16 @@ header{
     
 }
 
+.navegation-menu{
+    margin-top: 24px;
+}
+
+input[type="checkbox"]:checked ~ nav{
+    display: block;
+
+}
+
 nav{
     display: none;
 }
 
-.navegation-menu{
-    margin-top: 24px;
-}
