--- a/Css/header.css
+++ b/Css/header.css
@@ -12,7 +12,14 @@ header{
     display: inline-block;
     width: 68px;
     height: 64px;
-    
+}
+
+.logo-mobile{
+    display: block;
+}
+
+.logo-desktop{
+    display: none;
 }
 
 .navegation-menu{
@@ -73,3 +80,36 @@ nav{
     }
 }
 
+@media screen and (min-width: 1024px) {
+
+    header{
+        padding: 38px 120px;
+    }
+
+    .logo{
+        width: 260px;
+        height: 64px;
+    }
+
+    .img-mobile{
+        display: none;
+    }
+
+    .img-desktop{
+        display: block;
+    }
+
+    .navegation-menu a:hover{
+        color: var(--primary-color);
+    }
+
+
+}
+
+@media screen and (min-width: 1920px) {
+
+    header{
+        padding: 38px 160px;
+    }
+
+}
