--- a/Css/global.css
+++ b/Css/global.css
@@ -44,4 +44,31 @@ h1 {
 
 body{
      font-family: "Montserrat";
+     color: var(--text-primary-color);
+}
+
+.section-title h2{
+
+  font-weight: var(--titles-weight);
+  font-size: 28px ;
+  margin: 0px;
+  text-align: center;
+
+}
+
+.section-title hr{
+  height: 4px;
+  width: 180px;
+  background-color: var(--secondary-color);
+  border: none;
+  margin: 16px auto 32px;
+}
+
+@media screen and (min-width: 768px) {
+
+  .section-title h2{
+  font-size: 32px ;
+  }
+
+  
 }
