--- a/Css/offers.css
+++ b/Css/offers.css
@@ -1,3 +1,9 @@
+/* .offers{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+} */
+
 .card{
     color: var(--text-secondary-color);
     background-color: black;
