adiciona estilos aos botoes

--- a/Css/offers.css
+++ b/Css/offers.css
@@ -19,6 +19,8 @@
     display: block;
     background-color: transparent;
     position: static;
+    padding: 0;
+    margin-bottom: 24px;
 }
 
 .card header p {
@@ -38,6 +40,3 @@
     display: inline-block;
 }
 
-.button{ 
-    text-decoration: none;
-}
