--- a/Css/global.css
+++ b/Css/global.css
@@ -64,6 +64,19 @@ body{
   margin: 16px auto 32px;
 }
 
+.button{ 
+    display: inline-block;
+    color: var(--text-secondary-color);
+    font-weight: var(--titles-weight);
+    font-size: 20px;
+    text-decoration: none;
+    background-color: var(--secondary-color);
+    border-radius: 8px;
+    line-height: 64px;
+    width: 280px;
+    height: 64px;
+}
+
 @media screen and (min-width: 768px) {
 
   .section-title h2{
