--- a/Css/global.css
+++ b/Css/global.css
@@ -85,3 +85,11 @@ body{
 
   
 }
+
+@media screen and (min-width: 1024px) {
+
+  .button:hover{
+    background-color: var(--primary-color);
+  }
+  
+}
