--- a/Css/offers.css
+++ b/Css/offers.css
@@ -1,8 +1,9 @@
-/* .offers{
+
+.offers-cards{
     display: flex;
-    flex-direction: column;
     align-items: center;
-} */
+    flex-direction: column;
+}
 
 .card{
     color: var(--text-secondary-color);
@@ -13,6 +14,7 @@
     height: 288px;
     border-radius: 16px;
     text-align: center;
+    margin-top: 24px;
 }
 
 .card header{
