--- a/Css/global.css
+++ b/Css/global.css
@@ -67,9 +67,10 @@ section.hero{
 
 .section-title h2{
 
+  width: 260px;
   font-weight: var(--titles-weight);
   font-size: 28px ;
-  margin: 0px;
+  margin: 0px auto;
   text-align: center;
 
 }
@@ -102,7 +103,8 @@ section.hero{
   }
 
   .section-title h2{
-  font-size: 32px ;
+    width: 100%;
+    font-size: 32px ;
   }
 
   
