--- a/Css/global.css
+++ b/Css/global.css
@@ -83,6 +83,16 @@ section.hero{
   margin: 16px auto 32px;
 }
 
+.content-title{
+  font-size: 28px;
+  font-weight: var(--titles-weight);
+}
+
+.content-text{
+  font-size: 20px;
+  font-weight: var(--text-weight);
+}
+
 .button{ 
     display: inline-block;
     color: var(--text-secondary-color);
